// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HDCompletedCarDetailsPage /> with filled make, model and reg render component 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(HDCompletedCarDetailsPage)>
    <HDCompletedCarDetailsPage
      setNavigation={[Function]}
      submissionVM={
        Object {
          "baseData": Object {
            "accountHolder": Object {
              "dateOfBirth": null,
            },
            "isExistingCustomer": false,
            "isPostalDocument": false,
            "jobType": "Submission",
            "marketingContacts": Object {
              "allowEmail": false,
              "allowPost": false,
              "allowSMS": false,
              "allowTelephone": false,
            },
            "periodStatus": "Draft",
            "policyAddress": Object {},
            "producerCode": "Default",
            "productCode": "PrivateCar_Ext",
            "productName": "Private Car",
            "termType": "Annual",
          },
          "lobData": Object {
            "privateCar": Object {
              "coverables": Object {
                "addInterestTypeCategory": "PAVhcleAddlInterest",
                "drivers": Array [
                  Object {
                    "claimsAndConvictions": Object {
                      "claimsDetailsCollection": Array [],
                      "convictionsCollection": Array [],
                    },
                    "licenceObtainedDate": null,
                    "person": Object {
                      "prefix": Object {},
                    },
                    "previousPoliciesInformation": Object {},
                    "residingInUKSince": null,
                    "tempID": "dd309e0e-8153-423c-aaa5-9930481060ad",
                  },
                ],
                "vehicleDrivers": Array [
                  Object {},
                ],
                "vehicles": Array [
                  Object {
                    "isCarModified": "",
                    "ncdProtection": Object {
                      "drivingExperience": Object {},
                    },
                    "tracker": "",
                    "vehicleModifications": Array [],
                    "vehicleWorth": "",
                  },
                ],
              },
              "preQualQuestionSets": Array [],
            },
          },
        }
      }
    >
      <Container
        className="car-completed-details__container"
        fluid={true}
      >
        <div
          className="car-completed-details__container container-fluid"
        >
          <Row
            noGutters={false}
          >
            <div
              className="row"
            >
              <Col
                className="pr-4"
                xl={10}
                xs={12}
              >
                <div
                  className="pr-4 col-xl-10 col-12"
                >
                  <HDLabelRefactor
                    Tag="h1"
                    adjustImagePosition={true}
                    className="car-completed-details__label"
                    id="car-details-sorted-label"
                    text="Great! That's the car sorted"
                  >
                    <h1
                      className="car-completed-details__label"
                      id="car-details-sorted-label"
                    >
                      Great! That's the car sorted
                    </h1>
                  </HDLabelRefactor>
                  <div
                    className="horizontal-line--bright"
                  />
                  <ForwardRef
                    additionalText=" undefined undefined"
                    id="completed-card-car-info"
                    onBeforeOpen={null}
                    onBlur={null}
                    onCancel={null}
                    onChange={null}
                    onClick={null}
                    onConfirm={null}
                    onDelete={null}
                    onEdit={[Function]}
                    onFocus={null}
                    onSelect={null}
                    variant="car"
                    webAnalyticsEvent={
                      Object {
                        "event_action": "Great! That's the car sorted",
                      }
                    }
                  >
                    <HDCompletedCardInfo
                      additionalText=" undefined undefined"
                      className={null}
                      deleteTabIndex={1}
                      editTabIndex={0}
                      id="completed-card-car-info"
                      onDelete={null}
                      onDeleteKeyDown={[Function]}
                      onEdit={[Function]}
                      onEditKeyDown={[Function]}
                      text=""
                      variant="car"
                    >
                      <div
                        className="completed-info-card"
                      >
                        <div
                          className="completed-info-card__icon"
                        >
                          <img
                            alt="Car"
                            className="completed-info-card__icon-main"
                            src="Illustrations_1-car.svg"
                          />
                          <img
                            alt="tick"
                            className="completed-info-card__purple-tick"
                            src="Icon_Tick_Purple.svg"
                          />
                        </div>
                        <div
                          className="completed-info-card__text"
                        >
                          <HDLabelRefactor
                            Tag="p"
                            adjustImagePosition={true}
                            className="completed-info-card__additional-text"
                            text=" undefined undefined"
                          >
                            <p
                              className="completed-info-card__additional-text"
                            >
                               undefined undefined
                            </p>
                          </HDLabelRefactor>
                        </div>
                        <div
                          className="completed-info-card__icon-edit mb-3 "
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          role="button"
                          tabIndex={0}
                        >
                          <img
                            alt="Edit"
                            src="Icons_Edit.svg"
                          />
                        </div>
                      </div>
                    </HDCompletedCardInfo>
                  </ForwardRef>
                  <div
                    className="horizontal-line--bright"
                  />
                </div>
              </Col>
            </div>
          </Row>
          <Row
            noGutters={false}
          >
            <div
              className="row"
            >
              <Col>
                <div
                  className="col"
                >
                  <ForwardRef
                    className="car-completed-details__cont-btn"
                    id="continue-to-driver-details-button"
                    label="Continue to driver details"
                    onBeforeOpen={null}
                    onBlur={null}
                    onCancel={null}
                    onChange={null}
                    onClick={[Function]}
                    onConfirm={null}
                    onDelete={null}
                    onEdit={null}
                    onFocus={null}
                    onSelect={null}
                    variant="primary"
                    webAnalyticsEvent={
                      Object {
                        "event_action": "Continue - Redirecting from: HastingsCarDetails_Complete",
                      }
                    }
                  >
                    <HDButtonRefactor
                      className="car-completed-details__cont-btn"
                      disabled={false}
                      fullWidth={false}
                      id="continue-to-driver-details-button"
                      label="Continue to driver details"
                      onClick={[Function]}
                      onKeyPress={null}
                      size={null}
                      type="button"
                      variant="primary"
                    >
                      <Button
                        active={false}
                        block={false}
                        className="hd-btn hd-btn-primary car-completed-details__cont-btn"
                        disabled={false}
                        id="continue-to-driver-details-button"
                        onClick={[Function]}
                        onKeyPress={null}
                        size={null}
                        type="button"
                        variant="primary"
                      >
                        <button
                          className="hd-btn hd-btn-primary car-completed-details__cont-btn btn btn-primary"
                          disabled={false}
                          id="continue-to-driver-details-button"
                          onClick={[Function]}
                          onKeyPress={null}
                          type="button"
                        >
                          Continue to driver details
                        </button>
                      </Button>
                    </HDButtonRefactor>
                  </ForwardRef>
                </div>
              </Col>
            </div>
          </Row>
        </div>
      </Container>
    </HDCompletedCarDetailsPage>
  </Connect(HDCompletedCarDetailsPage)>
</Provider>
`;

exports[`<HDCompletedCarDetailsPage /> without filled make, model and reg render component 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(HDCompletedCarDetailsPage)>
    <HDCompletedCarDetailsPage
      setNavigation={[Function]}
      submissionVM={
        Object {
          "baseData": Object {
            "accountHolder": Object {
              "dateOfBirth": null,
            },
            "isExistingCustomer": false,
            "isPostalDocument": false,
            "jobType": "Submission",
            "marketingContacts": Object {
              "allowEmail": false,
              "allowPost": false,
              "allowSMS": false,
              "allowTelephone": false,
            },
            "periodStatus": "Draft",
            "policyAddress": Object {},
            "producerCode": "Default",
            "productCode": "PrivateCar_Ext",
            "productName": "Private Car",
            "termType": "Annual",
          },
          "lobData": Object {
            "privateCar": Object {
              "coverables": Object {
                "addInterestTypeCategory": "PAVhcleAddlInterest",
                "drivers": Array [
                  Object {
                    "claimsAndConvictions": Object {
                      "claimsDetailsCollection": Array [],
                      "convictionsCollection": Array [],
                    },
                    "licenceObtainedDate": null,
                    "previousPoliciesInformation": Object {},
                    "residingInUKSince": null,
                  },
                ],
                "vehicleDrivers": Array [
                  Object {},
                ],
                "vehicles": Array [
                  Object {
                    "isCarModified": "",
                    "isOvernightLocationHome": false,
                    "make": "ma",
                    "model": "mo",
                    "registrationsNumber": "SAM42A",
                    "tracker": "",
                    "vehicleModifications": Array [
                      Object {
                        "modification": "",
                      },
                    ],
                    "vehicleWorth": "",
                  },
                ],
              },
              "preQualQuestionSets": Array [],
            },
          },
        }
      }
    >
      <Container
        className="car-completed-details__container"
        fluid={true}
      >
        <div
          className="car-completed-details__container container-fluid"
        >
          <Row
            noGutters={false}
          >
            <div
              className="row"
            >
              <Col
                className="pr-4"
                xl={10}
                xs={12}
              >
                <div
                  className="pr-4 col-xl-10 col-12"
                >
                  <HDLabelRefactor
                    Tag="h1"
                    adjustImagePosition={true}
                    className="car-completed-details__label"
                    id="car-details-sorted-label"
                    text="Great! That's the car sorted"
                  >
                    <h1
                      className="car-completed-details__label"
                      id="car-details-sorted-label"
                    >
                      Great! That's the car sorted
                    </h1>
                  </HDLabelRefactor>
                  <div
                    className="horizontal-line--bright"
                  />
                  <ForwardRef
                    additionalText=" undefined undefined"
                    id="completed-card-car-info"
                    onBeforeOpen={null}
                    onBlur={null}
                    onCancel={null}
                    onChange={null}
                    onClick={null}
                    onConfirm={null}
                    onDelete={null}
                    onEdit={[Function]}
                    onFocus={null}
                    onSelect={null}
                    variant="car"
                    webAnalyticsEvent={
                      Object {
                        "event_action": "Great! That's the car sorted",
                      }
                    }
                  >
                    <HDCompletedCardInfo
                      additionalText=" undefined undefined"
                      className={null}
                      deleteTabIndex={1}
                      editTabIndex={0}
                      id="completed-card-car-info"
                      onDelete={null}
                      onDeleteKeyDown={[Function]}
                      onEdit={[Function]}
                      onEditKeyDown={[Function]}
                      text=""
                      variant="car"
                    >
                      <div
                        className="completed-info-card"
                      >
                        <div
                          className="completed-info-card__icon"
                        >
                          <img
                            alt="Car"
                            className="completed-info-card__icon-main"
                            src="Illustrations_1-car.svg"
                          />
                          <img
                            alt="tick"
                            className="completed-info-card__purple-tick"
                            src="Icon_Tick_Purple.svg"
                          />
                        </div>
                        <div
                          className="completed-info-card__text"
                        >
                          <HDLabelRefactor
                            Tag="p"
                            adjustImagePosition={true}
                            className="completed-info-card__additional-text"
                            text=" undefined undefined"
                          >
                            <p
                              className="completed-info-card__additional-text"
                            >
                               undefined undefined
                            </p>
                          </HDLabelRefactor>
                        </div>
                        <div
                          className="completed-info-card__icon-edit mb-3 "
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          role="button"
                          tabIndex={0}
                        >
                          <img
                            alt="Edit"
                            src="Icons_Edit.svg"
                          />
                        </div>
                      </div>
                    </HDCompletedCardInfo>
                  </ForwardRef>
                  <div
                    className="horizontal-line--bright"
                  />
                </div>
              </Col>
            </div>
          </Row>
          <Row
            noGutters={false}
          >
            <div
              className="row"
            >
              <Col>
                <div
                  className="col"
                >
                  <ForwardRef
                    className="car-completed-details__cont-btn"
                    id="continue-to-driver-details-button"
                    label="Continue to driver details"
                    onBeforeOpen={null}
                    onBlur={null}
                    onCancel={null}
                    onChange={null}
                    onClick={[Function]}
                    onConfirm={null}
                    onDelete={null}
                    onEdit={null}
                    onFocus={null}
                    onSelect={null}
                    variant="primary"
                    webAnalyticsEvent={
                      Object {
                        "event_action": "Continue - Redirecting from: HastingsCarDetails_Complete",
                      }
                    }
                  >
                    <HDButtonRefactor
                      className="car-completed-details__cont-btn"
                      disabled={false}
                      fullWidth={false}
                      id="continue-to-driver-details-button"
                      label="Continue to driver details"
                      onClick={[Function]}
                      onKeyPress={null}
                      size={null}
                      type="button"
                      variant="primary"
                    >
                      <Button
                        active={false}
                        block={false}
                        className="hd-btn hd-btn-primary car-completed-details__cont-btn"
                        disabled={false}
                        id="continue-to-driver-details-button"
                        onClick={[Function]}
                        onKeyPress={null}
                        size={null}
                        type="button"
                        variant="primary"
                      >
                        <button
                          className="hd-btn hd-btn-primary car-completed-details__cont-btn btn btn-primary"
                          disabled={false}
                          id="continue-to-driver-details-button"
                          onClick={[Function]}
                          onKeyPress={null}
                          type="button"
                        >
                          Continue to driver details
                        </button>
                      </Button>
                    </HDButtonRefactor>
                  </ForwardRef>
                </div>
              </Col>
            </div>
          </Row>
        </div>
      </Container>
    </HDCompletedCarDetailsPage>
  </Connect(HDCompletedCarDetailsPage)>
</Provider>
`;
